# src/domains/profile/profile.dao.js
@@ -2,7 +2,7 @@ import { pool } from "../../config/db.config.js";
 import { BaseError } from "../../config/error.js";
 import { status } from "../../config/response.status.js";
 import { getUser, getFitToUserId, getStyleToUserId, getFollowerToUserId, getFollowingToUserId,
-    getMyFitSQL, getMyFitCategorySQL } from "./profile.sql.js";
+    getMyFitSQL, getMyFitCategorySQL, getWishSQL, getWishCategorySQL } from "./profile.sql.js";
 
 export const getUserDAO = async (userId) => {
     try {
@@ -71,6 +71,23 @@ export const getMyFitDAO = async (userId, category) => {
             return data;
         }else{
             const [data] = await pool.query(getMyFitCategorySQL, [userId, category]);
+            conn.release();
+            return data;
+        }
+    } catch (err) {
+        throw new BaseError(status.PARAMETER_IS_WRONG);
+    }
+}
+
+export const getWishDAO = async (userId, category) => {
+    try {
+        const conn = await pool.getConnection();
+        if(typeof category == "undefined"){
+            const [data] = await pool.query(getWishSQL, userId);
+            conn.release();
+            return data;
+        }else{
+            const [data] = await pool.query(getWishCategorySQL, [userId, category]);
             conn.release();
             return data;
         }
