# src/domains/profile/profile.provider.js
@@ -1,5 +1,5 @@
-import { getInfoDTO, getMyFitDTO } from "./profile.dto.js"
-import { getUserDAO, getFitDAO, getStyleDAO, getFollowDAO, getMyFitDAO } from "./profile.dao.js";
+import { getInfoDTO, getMyFitDTO, getWishDTO } from "./profile.dto.js"
+import { getUserDAO, getFitDAO, getStyleDAO, getFollowDAO, getMyFitDAO, getWishDAO } from "./profile.dao.js";
 
 export const getInfo = async (userId) => {
     return getInfoDTO(await getUserDAO(userId), await getFitDAO(userId), await getStyleDAO(userId), await getFollowDAO(userId));
@@ -8,4 +8,9 @@ export const getInfo = async (userId) => {
 export const getMyFit = async (userId, query) => {
     const { category } = query;
     return getMyFitDTO(await getMyFitDAO(userId, category));
+}
+
+export const getWish = async (userId, query) => {
+    const { category } = query;
+    return getWishDTO(await getWishDAO(userId, category));
 }
